# Chess

./: .clang-format  .gitmodules  CMakeLists.txt  Chess.sln
Chess-Logic/: CMakeLists.txt
Chess-Logic/src/API/: ChessLogicAPI.cpp  ChessLogicAPI.h  ChessLogicAPIDefines.h
Chess-Logic/src/Board/: ChessBoard.cpp  ChessBoard.h
Chess-Logic/src/Communication/: UICommunication.cpp  UICommunication.h
Chess-Logic/src/ConfigurationManager/: GameManager.cpp  GameManager.h
Chess-Logic/src/FileManager/: FileManager.cpp  FileManager.h
Chess-Logic/src/GameManager/: GameManager.cpp  GameManager.h
Chess-Logic/src/Helper/: Conversion.h  JsonConversion.h  Parameters.h  ThreadBase.h
Chess-Logic/src/Logger/: Logging.cpp  Logging.h  LoggingHelper.cpp  LoggingHelper.h
Chess-Logic/src/Miscellaneous/: Helper.h  JsonConversion.h  Parameters.h
Chess-Logic/src/Moves/: Move.cpp  Move.h  MoveExecution.cpp  MoveExecution.h  MoveGeneration.cpp  MoveGeneration.h  MoveHelper.cpp  MoveHelper.h  MoveNotationHelper.cpp  MoveNotationHelper.h  MoveSerialization.h  MoveType.h  MoveValidation.cpp  MoveValidation.h  MovementManager.cpp  MovementManager.h  MultiplayerMoveManager.cpp
Chess-Logic/src/Multiplayer/: ChatMessage.cpp  ChatMessage.h  IMultiplayerMessage.cpp  IMultiplayerMessage.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageManager.cpp  MessageManager.h  MoveMessage.cpp  MoveMessage.h  MultiplayerManager.cpp  MultiplayerManager.h
Chess-Logic/src/Multiplayer/Discovery/: DiscoveryEndpoint.h  DiscoveryService.cpp  DiscoveryService.h
Chess-Logic/src/Multiplayer/RemoteMessaging/: CommunicationThreads.cpp  CommunicationThreads.h  MultiplayerMessageStruct.h  RemoteCommunication.cpp  RemoteCommunication.h  RemoteReceiver.cpp  RemoteReceiver.h  RemoteSender.cpp  RemoteSender.h
Chess-Logic/src/Multiplayer/TCPConnection/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h
Chess-Logic/src/Network/: DiscoveryService.cpp  DiscoveryService.h  NetworkAdapter.h  NetworkInformation.cpp  NetworkInformation.h  NetworkManager.cpp  NetworkManager.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h
Chess-Logic/src/Observer/: IObservable.h  IObserver.h
Chess-Logic/src/Piece/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess-Logic/src/Player/: Player.cpp  Player.h
Chess-Logic/src/StateMachine/: StateMachine.cpp  StateMachine.h
Chess-Logic/src/UserSettings/: UserSettings.cpp  UserSettings.h
Chess.Engine/: CMakeLists.txt
Chess.Engine/Chess.Engine/: CMakeLists.txt
Chess.Engine/Chess.Engine.API/: CMakeLists.txt
Chess.Engine/Chess.Engine.API/src/: EngineAPI.cpp  EngineAPI.h
Chess.Engine/Chess.Engine.Core/: CMakeLists.txt  Project.h.in
Chess.Engine/Chess.Engine.Core/src/API/: EngineAPIDefines.h
Chess.Engine/Chess.Engine.Core/src/Board/: ChessBoard.cpp  ChessBoard.h  LightChessBoard.cpp  LightChessBoard.h
Chess.Engine/Chess.Engine.Core/src/CPUPLayer/: CPUPlayer.cpp  CPUPlayer.h
Chess.Engine/Chess.Engine.Core/src/Communication/: PlainCDefines.h  UICommunication.cpp  UICommunication.h
Chess.Engine/Chess.Engine.Core/src/GameEngine/: GameEngine.cpp  GameEngine.h
Chess.Engine/Chess.Engine.Core/src/GameManager/: GameManager.cpp  GameManager.h
Chess.Engine/Chess.Engine.Core/src/Helper/: IObserver.h  JsonConversion.h  Parameters.h  ThreadBase.h
Chess.Engine/Chess.Engine.Core/src/Moves/: Move.h  MoveHelper.h
Chess.Engine/Chess.Engine.Core/src/Multiplayer/: MultiplayerManager.cpp  MultiplayerManager.h
Chess.Engine/Chess.Engine.Core/src/Network/: NetworkAdapter.h  NetworkInformation.cpp  NetworkInformation.h  NetworkManager.cpp  NetworkManager.h
Chess.Engine/Chess.Engine.Core/src/Piece/: ChessPiece.h  King.h  Queen.cpp  Rook.h
Chess.Engine/Chess.Engine.Core/src/Player/: CPUPlayer.cpp  CPUPlayer.h  Player.cpp  Player.h
Chess.Engine/Chess.Engine.Core/src/PositionalEvaluation/: PositionalEvaluation.cpp  PositionalEvaluation.h
Chess.Engine/Chess.Engine.Core/src/StateMachine/: StateMachine.cpp
Chess.Engine/Chess.Engine.Core/src/UserSettings/: UserSettings.cpp  UserSettings.h
Chess.Engine/Chess.Engine.Performance/: CMakeLists.txt
Chess.Engine/Chess.Engine.Performance/scripts/: run_performance_tests.py
Chess.Engine/Chess.Engine.Performance/source/CPUPerformanceTests/: CPUPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/CPUPlayerPerformanceTests/: CPUPlayerPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/LightChessBoardPerformanceTests/: LightChessBoardPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/MoveEvaluationPerformanceTests/: MoveEvaluationPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/MoveGenerationPerformanceTests/: MoveGenerationPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/PerfFiles/: CPUPerformanceTests.cpp  CPUPlayerPerformanceTests.cpp  LightChessBoardPerformanceTests.cpp  MoveEvaluationPerformanceTests.cpp  MoveGenerationPerformanceTests.cpp  PerformanceJSONHelper.h  PositionalEvaluationPerformanceTests.cpp
Chess.Engine/Chess.Engine.Performance/source/PerfHelper/: PerfResults.h  PerformanceJSONHelper.h
Chess.Engine/Chess.Engine.Performance/src/: main.cpp
Chess.Engine/Chess.Engine.Tests/: CMakeLists.txt
Chess.Engine/Chess.Engine.Tests/source/: Chess.Engine.Tests.cpp  Chess.Engine.Tests.h  ChessboardTests.cpp  MovesTests.cpp
Chess.Engine/Chess.Engine/src/API/: ChessLogicAPI.cpp  (+4 more)
Chess.Engine/cmake/: BuildInfo.cmake  Coverage.cmake  Doxygen.cmake  Testing.cmake  buildinfo.h.in
Chess.Engine/scripts/: performance_analyzer.py  performance_data_collector.py  performance_pipeline.py  requirements.txt
Chess.Engine/src/: CMakeLists.txt
Chess.Engine/src/Chess.Engine.API/: CMakeLists.txt
Chess.Engine/src/Chess.Engine.ConsoleApp/: CMakeLists.txt
Chess.Engine/src/Chess.Engine.Core/: CMakeLists.txt
Chess.Engine/tests/: CMakeLists.txt
Chess.Engine/tests/Core.Tests/: CMakeLists.txt
(+486 files in other folders)
